[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Upgrades/big-bomb.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Quicksand-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Icons/coin.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UpgradeItem.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0, 0, 0, 0.0784314 )
shadow_size = 8

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UpgradeItem" type="Panel"]
margin_right = 662.0
margin_bottom = 128.0
rect_min_size = Vector2( 662, 128 )
rect_pivot_offset = Vector2( 331, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 96.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameCost" type="HBoxContainer" parent="."]
margin_left = 128.0
margin_top = 21.0
margin_right = 353.0
margin_bottom = 54.0
mouse_filter = 2
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NameCost"]
self_modulate = Color( 0.301961, 0.301961, 0.301961, 1 )
margin_top = 1.0
margin_right = 111.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Big bomb"

[node name="Cost" type="HBoxContainer" parent="NameCost"]
margin_left = 143.0
margin_right = 225.0
margin_bottom = 33.0
mouse_filter = 2
custom_constants/separation = 8

[node name="Currency" type="TextureRect" parent="NameCost/Cost"]
margin_right = 32.0
margin_bottom = 33.0
texture = ExtResource( 3 )

[node name="Cost" type="Label" parent="NameCost/Cost"]
self_modulate = Color( 0.301961, 0.301961, 0.301961, 1 )
margin_left = 40.0
margin_top = 1.0
margin_right = 82.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "250"

[node name="Description" type="Label" parent="."]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 128.0
margin_top = 53.0
margin_right = 450.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0% chance of double explosion range"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Panel" parent="."]
self_modulate = Color( 0.768627, 0.768627, 0.768627, 1 )
margin_left = 128.0
margin_top = 88.0
margin_right = 192.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Panel" parent="."]
self_modulate = Color( 0.768627, 0.768627, 0.768627, 1 )
margin_left = 208.0
margin_top = 88.0
margin_right = 272.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Panel" parent="."]
self_modulate = Color( 0.768627, 0.768627, 0.768627, 1 )
margin_left = 288.0
margin_top = 88.0
margin_right = 352.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Panel" parent="."]
self_modulate = Color( 0.768627, 0.768627, 0.768627, 1 )
margin_left = 368.0
margin_top = 88.0
margin_right = 432.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
